{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 126,
  "lineage": "23554454-9192-296f-b2b9-e06c9323938d",
  "resources": [
    {
      "module": "module.Subnet-appgw",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.3.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/Subnet-appgw",
            "name": "Subnet-appgw",
            "resource_group_name": "az104-06-rg1",
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-vnet01.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet0_vnet01",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/Subnet0",
            "name": "Subnet0",
            "resource_group_name": "az104-06-rg1",
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-vnet01.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet0_vnet2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.62.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/subnets/Subnet0",
            "name": "Subnet0",
            "resource_group_name": "az104-06-rg1",
            "virtual_network_name": "az104-06-vnet2"
          },
          "dependencies": [
            "module.az104-06-vnet2.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet0_vnet3",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.63.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/subnets/Subnet0",
            "name": "Subnet0",
            "resource_group_name": "az104-06-rg1",
            "virtual_network_name": "az104-06-vnet3"
          },
          "dependencies": [
            "module.az104-06-vnet3.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.Subnet1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.60.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/Subnet1",
            "name": "Subnet1",
            "resource_group_name": "az104-06-rg1",
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-vnet01.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.az104-06-lb4",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg4/providers/Microsoft.Network/loadBalancers/az104-06-lb4/frontendIPConfigurations/az104-06-pip4",
                "name": "az104-06-pip4",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg4/providers/Microsoft.Network/publicIPAddresses/az104-06-pip4"
              }
            ],
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg4/providers/Microsoft.Network/loadBalancers/az104-06-lb4",
            "location": "canadacentral",
            "name": "az104-06-lb4",
            "resource_group_name": "az104-06-rg4",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.az104-06-pip4.azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.az104-06-pip4",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg4/providers/Microsoft.Network/publicIPAddresses/az104-06-pip4",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.204.185.35",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "az104-06-pip4",
            "resource_group_name": "az104-06-rg4",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.az104-06-pip5",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg5/providers/Microsoft.Network/publicIPAddresses/az104-06-pip5",
            "idle_timeout_in_minutes": 4,
            "ip_address": "4.204.187.131",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "az104-06-pip5",
            "resource_group_name": "az104-06-rg5",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "module": "module.az104-06-vnet01",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.60.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "db40387b-f83c-411c-81c3-e01a7f74a179",
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01",
            "location": "canadacentral",
            "name": "az104-06-vnet01",
            "resource_group_name": "az104-06-rg1",
            "subnet": [
              {
                "address_prefix": "10.60.0.0/24",
                "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/Subnet0",
                "name": "Subnet0"
              },
              {
                "address_prefix": "10.60.1.0/24",
                "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/Subnet1",
                "name": "Subnet1"
              },
              {
                "address_prefix": "10.60.3.224/27",
                "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/Subnet-appgw",
                "name": "Subnet-appgw"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.az104-06-vnet2",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.62.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cf77c52b-e2af-4bc3-9614-c19988b52754",
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2",
            "location": "canadacentral",
            "name": "az104-06-vnet2",
            "resource_group_name": "az104-06-rg1",
            "subnet": [
              {
                "address_prefix": "10.62.0.0/24",
                "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/subnets/Subnet0",
                "name": "Subnet0"
              }
            ],
            "tags": {
              "environment": "kaan"
            }
          },
          "dependencies": [
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.az104-06-vnet3",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.63.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c081078e-6941-46aa-b177-296de969a7ab",
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3",
            "location": "canadacentral",
            "name": "az104-06-vnet3",
            "resource_group_name": "az104-06-rg1",
            "subnet": [
              {
                "address_prefix": "10.63.0.0/24",
                "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/subnets/Subnet0",
                "name": "Subnet0"
              }
            ],
            "tags": {
              "environment": "ops"
            }
          },
          "dependencies": [
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nic_vm0",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic_vm0",
            "internal_domain_name_suffix": "pm2ebwz25aoedaod2anh43fbpb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.60.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/Subnet0"
              }
            ],
            "location": "canadacentral",
            "mac_address": "60-45-BD-5F-C1-26",
            "name": "nic_vm0",
            "private_ip_address": "10.60.0.4",
            "private_ip_addresses": [
              "10.60.0.4"
            ],
            "resource_group_name": "az104-06-rg1",
            "virtual_machine_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Compute/virtualMachines/az104-06-vm0"
          },
          "dependencies": [
            "module.Subnet0_vnet01.azurerm_subnet.subnet",
            "module.az104-06-vnet01.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nic_vm1",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic_vm1",
            "internal_domain_name_suffix": "pm2ebwz25aoedaod2anh43fbpb.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.60.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/subnets/Subnet1"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-0D-3A-F3-94-45",
            "name": "nic_vm1",
            "private_ip_address": "10.60.1.4",
            "private_ip_addresses": [
              "10.60.1.4"
            ],
            "resource_group_name": "az104-06-rg1",
            "virtual_machine_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Compute/virtualMachines/az104-06-vm1"
          },
          "dependencies": [
            "module.Subnet1.azurerm_subnet.subnet",
            "module.az104-06-vnet01.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nic_vm2",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic_vm2",
            "internal_domain_name_suffix": "fpcxpt3p2lbuxfquygmyrnjhke.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.62.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/subnets/Subnet0"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-0D-3A-FF-1A-DC",
            "name": "nic_vm2",
            "private_ip_address": "10.62.0.4",
            "private_ip_addresses": [
              "10.62.0.4"
            ],
            "resource_group_name": "az104-06-rg1",
            "virtual_machine_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Compute/virtualMachines/az104-06-vm2"
          },
          "dependencies": [
            "module.Subnet0_vnet2.azurerm_subnet.subnet",
            "module.az104-06-vnet2.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.nic_vm3",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/networkInterfaces/nic_vm3",
            "internal_domain_name_suffix": "rydydqcbngvenmlxffw4s0nhvd.ux.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.63.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/subnets/Subnet0"
              }
            ],
            "location": "canadacentral",
            "mac_address": "00-0D-3A-FF-10-27",
            "name": "nic_vm3",
            "private_ip_address": "10.63.0.4",
            "private_ip_addresses": [
              "10.63.0.4"
            ],
            "resource_group_name": "az104-06-rg1",
            "virtual_machine_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Compute/virtualMachines/az104-06-vm3"
          },
          "dependencies": [
            "module.Subnet0_vnet3.azurerm_subnet.subnet",
            "module.az104-06-vnet3.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.rt23",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/routeTables/az104-06-rt23",
            "location": "canadacentral",
            "name": "az104-06-rt23",
            "resource_group_name": "az104-06-rg1",
            "route": [
              {
                "address_prefix": "10.62.0.0/24",
                "name": "rt23-to-Subnet0_in_Vnet2",
                "next_hop_in_ip_address": "",
                "next_hop_type": "None"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.rt32",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/routeTables/az104-06-rt32",
            "location": "canadacentral",
            "name": "az104-06-rt32",
            "resource_group_name": "az104-06-rg1",
            "route": [
              {
                "address_prefix": "10.63.0.0/24",
                "name": "rt32-to-Subnet0_in_Vnet3",
                "next_hop_in_ip_address": "",
                "next_hop_type": "None"
              }
            ],
            "subnets": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering_1_to_2",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/virtualNetworkPeerings/vnet01-to-vnet2",
            "name": "vnet01-to-vnet2",
            "remote_virtual_network_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2",
            "resource_group_name": "az104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-vnet2.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering_1_to_3",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01/virtualNetworkPeerings/vnet01-to-vnet3",
            "name": "vnet01-to-vnet3",
            "remote_virtual_network_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3",
            "resource_group_name": "az104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-06-vnet01"
          },
          "dependencies": [
            "module.az104-06-vnet3.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering_2_to_1",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet2/virtualNetworkPeerings/vnet2-to-vnet01",
            "name": "vnet2-to-vnet01",
            "remote_virtual_network_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01",
            "resource_group_name": "az104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-06-vnet2"
          },
          "dependencies": [
            "module.az104-06-vnet01.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering_3_to_1",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet3/virtualNetworkPeerings/vnet3-to-vnet01",
            "name": "vnet3-to-vnet01",
            "remote_virtual_network_id": "/subscriptions/e8760043-8652-49f9-b487-4b27daf3ec7a/resourceGroups/az104-06-rg1/providers/Microsoft.Network/virtualNetworks/az104-06-vnet01",
            "resource_group_name": "az104-06-rg1",
            "use_remote_gateways": false,
            "virtual_network_name": "az104-06-vnet3"
          },
          "dependencies": [
            "module.az104-06-vnet01.azurerm_virtual_network.vnet",
            "module.rg_az104_06_rg1.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}